--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel = "stylesheet" href = "main.css">
+    <link rel = "stylesheet" href = "popup.css">
 
     <title>Manipulated Image Detector</title>
   </head>
   <body>
     <h1 className = "title">Manipulated Image Detector</h1>
     <input type = "file" id = "file-input" accept = "image/*" />
-    <div id = "uploaded_image"></div>
+    <div id = "uploaded_image">Waiting for image...</div>
     <div id = "predictions"></div>
     <script src = "https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js"></script>
-    <script src = "main.js"></script>
+    <script src = "popup.js"></script>
   </body>
 </html>
