--- a/help.html
+++ b/help.html
@@ -2,50 +2,49 @@
 <html>
   <head>
     <title>Help</title>
-    
-    <link rel="stylesheet" href="help.css">
+    <link rel = "stylesheet" href = "help.css">
   </head>
   <body>
-    <div class="container">
+    <div class = "container">
       <h1>How to Use the Extension</h1>
       <p>
-        Secondary-click on an image from a webpage and select "Predict Image Authenticity" from the Context Menu.
-        A pop-up with the "Manipulated Image Detector" will open, the image will automatically be given to the
-        model, and the model will predict the authenticity of the image.
+        To predict the authenticity of an image from a webpage, simply secondary-click (right-click) on the desired image and choose "Predict Image Authenticity" from the Context Menu.
       </p>
-
-      <p><a href="popup.html" target="_blank"> Click here to open the "Manipulated Image Detector" as a new tab of your browser.</a></p>
+      <img src = "icons/secondary_click.png" class = "secondary_click" alt = "Secondary Click Context Menu Option">
+      <p>
+        This action will trigger a pop-up displaying the "Manipulated Image Detector." The image will be promptly submitted to the detector, which will then provide a prediction 
+        regarding its authenticity.
+      </p>
+      <p><a href="popup.html" target="_blank">Click here to open the "Manipulated Image Detector"<br>as a new tab of your browser.</a></p>
     </div>
 
     <div class="container">
       <h1>How Does the Detector Work?</h1>
       <p>
-        This Chrome extension is meant to be a companion to the <a href = "https://github.com/ngin102/manipulated-image-detector-and-recommender" target="_blank"> "Manipulated Image Detector and Recommender" Android application</a>.
+        This Chrome extension serves as a companion to the <a href = "https://github.com/ngin102/manipulated-image-detector-and-recommender" target="_blank"> "Manipulated Image Detector and Recommender"<br>Android application</a>.
       </p>
-
       <p>
-        It uses an on-device model that was built to detect whether an image has been manipulated or edited in any way.
-        The model is a custom convolutional neural network that was trained on 3938 authentic images and 3938 manipulated images from the <a href="https://www.kaggle.com/datasets/sophatvathana/casia-dataset" target="_blank"> CASIA2 dataset</a>.
-        The model, once fully trained, achieved an F1 score of ~87.3% when tested on another subset of images from the CASIA2 dataset it was not explicitly trained on.
+        It utilizes an on-device model specifically designed to detect any potential manipulation or editing in an image.<br>This model is a custom convolutional neural network that underwent training on a subset of 3938 authentic images and 3938 manipulated images from the <a href="https://www.kaggle.com/datasets/sophatvathana/casia-dataset" target="_blank"> CASIA2 dataset</a>.
       </p>
-
       <p>
-        Remember that all detections made by the model are, in fact, predictions.
+        The fully-trained model achieved a F1 score of approximately 87.3% when tested on a separate<br>subset of images from the CASIA2 dataset, which it had not been explicitly trained on.
+      </p>
+      <p>
+        Remember that all detections made by<br>the model are, in fact, predictions.
       </p>
     </div>
 
     <div class="container">
       <h1>More</h1>
       <p>
-        Have suggestions to improve this extension? <a href="mailto:nicholas.gin9@gmail.com">Click here to send feedback.</a>
+        Have suggestions to improve this extension?<br><a href="mailto:nicholas.gin9@gmail.com">Click here to send feedback.</a>
       </p>
-    
       <p>
-        <a href = "https://github.com/ngin102/manipulated-image-detector-and-recommender">Click here for more information on the model used in this extension and the Android application.</a>
+        <a href = "https://github.com/ngin102/manipulated-image-detector-and-recommender">Click here for further details regarding the model utilized in this extension and the Android application.</a>
       </p>
     </div>
 
-    <p class = "footer">Copyright &#169 2023 Nicholas Gin</p>
+    <p class = "footer">&#169 2023 Nicholas Gin</p>
 
   </body>
 </html>
