--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
         <div id = "uploaded_image"><img src = "icons/waiting_for_image.png" alt = "Waiting for Image"></div>
         <div id = "predictions">Waiting for image...</div>
 
-
+        <p class = "notif">This window receives automated notifications to stay active every 25 seconds (until you close it),<br> so it can update in real-time when a new image is uploaded to the detector.</p>
         <p class = "footer">&#169 2023 Nicholas Gin</p>
       </div>
     </div>
